--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpacker-pure-config",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Pure webpack way config for webpacker and rails.",
   "main": "index.js",
   "scripts": {
@@ -28,7 +28,7 @@
     "webpack": "^4.8.3"
   },
   "dependencies": {
-    "readdir-recursively-sync": "^0.2.0",
-    "webpack-manifest-plugin": "^2.0.2"
+    "webpack-manifest-plugin": "^2.0.2",
+    "webpacker-entry": "^0.1.0"
   }
 }
